<resources>
    <string name="app_name">KeePassMob Password Manager</string>
    <string name="app_title">KeePassMob</string>


    <string name="hello_world">Hello world!</string>
    <string name="categories_label">Categories</string>
    <string name="groups_label">Groups</string>
    <string name="group_label">Group</string>
    <string name="lock_database_label">Lock</string>
    <string name="search_label">Search</string>
    <string name="save_label">Save</string>
    <string name="delete_label">Delete</string>
    <string name="choose_group_label">1. Choose group</string>
    <string name="creation_time">Creation</string>
    <string name="expiration_time">Expiration</string>
    <string name="last_access_time">Access</string>
    <string name="modification_time">Modification</string>

    <string name="lock_label">Lock database</string>
    <string name="exit_label">exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_master_key">Change master key</string>
    <string name="subtype_en_US">KeePass Mobile</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login">Login</string>
    <string name="db_file_path_label">DB filename</string>
    <string name="db_password_label">Password</string>
    <string name="db_keyfile_label">Key file</string>
    <string name="db_file_path_value">db file path value</string>
    <string name="db_password_value">pwd value</string>
    <string name="db_keyfile_path_value">key file path value</string>
    <string name="btn_open_database">Open database</string>
    <string name="preferences_login_activity_file">login_preferences</string>
    <string name="preferences_db_filename">db_filename</string>
    <string name="preferences_db_source">db_source</string>

    <string name="delete_confirm_title">Delete entry</string>
    <string name="delete_confirm_msg">Are you sure you want to delete this entry?</string>
    <string name="entry_saved">Entry saved</string>

    <string name="error_login_activity_fill_form">Password or key file is required</string>
    <string name="error_login_activity_db_not_filled">Pick database file to open</string>
    <string name="error_login_activity_db_not_exists">Database file not exists</string>
    <string name="error_login_activity_key_not_exists">Keyfile not exists</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="error_could_not_save_database">Could not save database</string>
    <string name="error_title_could_not_be_empty">Title could not be empty</string>
    <string name="error_passwords_not_equal">Passwords not equals</string>
    <string name="error_password_could_not_be_empty">Password could not be empty</string>
    <string name="error_key_file_not_exists">Key file not exists</string>

    <string name="title_activity_file_browser">File Browser</string>


    <string name="msg_auto_login_from_session">Auto unlock</string>
    <string name="db_locked_keyboard_label">Database locked</string>
    <string name="db_button_unlock_label">Unlock database</string>
    <string name="title_activity_entry_view">EntryViewActivity</string>

    <string name="label_title">Title</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_url">URL</string>
    <string name="label_note">Note</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_password_generator">Password generator</string>
    <string name="label_use_following_character">Use following character</string>
    <string name="label_upper_letters">Upper letters</string>
    <string name="label_lower_letters">Lower letters</string>
    <string name="label_numbers">Numbers</string>
    <string name="label_special">Special</string>
    <string name="label_password_length">Length: %d chars</string>
    <string name="label_generate">Generate</string>
    <string name="label_use_password">Use password to protect my database</string>
    <string name="label_use_keyfile">Use key file to protect my database</string>
    <string name="label_new_password">New password</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="label_choose_key_file">Key file</string>
    <string name="label_save_master_key">Save</string>
    <string name="label_master_key_changed">Master key changed</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="never">Never</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="version">Version</string>
    <string name="about">About app</string>
    <string name="title_activity_entry_edit">Edit entry</string>
    <string name="title_activity_entry_add">New entry</string>

    <string name="preferences_password_generator">Password generator</string>
    <string name="preferences_autolock_timeout">Lock database</string>
    <string name="preferences_save_keyfile_location">Save key file location</string>
    <string name="preferences_show_username">Display username in entry view</string>
    <string name="preferences_search_category">Search options</string>
    <string name="preferences_search_in_username">Search in username</string>
    <string name="preferences_search_in_url">Search in URL</string>
    <string name="preferences_search_in_notes">Search in notes</string>
    <string name="preferences_copy_password_to_clipboard">Use clipboard to copy credentials</string>

    <string name="notification_copy_username">Select to copy username to clipboard</string>
    <string name="notofication_copy_password">Select to copy password to clipboard</string>
    <string name="notification_username_copied">Username in clipboard</string>
    <string name="notification_password_copied">Password in clipboard</string>
    <string name="title_activity_clipboard">ClipboardActivity</string>
    <string name="username_in_clipboard">Username in clipboard</string>
    <string name="password_in_clipboard">Password in clipboard</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_set_master_key">Set master key</string>
    <string name="do_you_like_this_app">Do you like this app?</string>
    <string name="write_review">Write review</string>


</resources>
