<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/KeyboardBackgroundColor"
    android:padding="10px"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_use_following_character"
        android:id="@+id/textView5"
        android:layout_below="@+id/label_creation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="7dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lower_letters"
        android:id="@+id/lower_chk"

        android:layout_alignRight="@+id/upper_chk"
        android:layout_alignEnd="@+id/upper_chk"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_upper_letters"
        android:id="@+id/upper_chk"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_numbers"
        android:id="@+id/numbers_chk"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_special"
        android:id="@+id/special_chk" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password_length"
        android:id="@+id/length_label"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="7dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwd_length"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:max="32"
        android:progress="12" />




    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center_horizontal|right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel"
            android:id="@+id/cancel_btn"
            android:layout_alignBottom="@+id/generate_btn"
            android:layout_toLeftOf="@+id/generate_btn"
            android:layout_toStartOf="@+id/generate_btn"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_generate"
            android:id="@+id/generate_btn"
            android:layout_below="@+id/pwd_length"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="bottom" />
    </LinearLayout>

</LinearLayout>