<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="KeePassMob\nPassword Manager"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_below="@+id/imageView2"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/main_icon"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:maxWidth="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version_label"
        android:textStyle="bold"
        android:text="version"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignRight="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/version_label"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_review"
        android:id="@+id/openReviewBtn"
        style="@style/PrimaryButton"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_like_this_app"
        android:id="@+id/textView6"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="keepasspm@lukaszgajos.com"
        android:id="@+id/textView7"
        android:inputType="textEmailAddress"
        android:autoLink="email"
        android:layout_below="@+id/version_label"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="https://github.com/lukaszgajos"
        android:id="@+id/textView8"
        android:inputType="textUri"
        android:autoLink="web"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

</RelativeLayout>