<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.lukaszgajos.keepassplus.MainActivity">

        <!--<include android:id="@+id/tool_bar" layout="@layout/toolbar"></include>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/pw_entry_list"
                android:clickable="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_entry_btn"
                android:background="@drawable/floating_button"

                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_add_white_24dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="32dp" />

            <!--<android.support.design.widget.FloatingActionButton-->
                <!--android:src="@drawable/ic_add_white_24dp"-->
                <!--app:fabSize="normal"-->
                <!--android:id="@+id/add_entry_btn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:elevation="4dp"-->
                <!--app:borderWidth="0dp"-->

                <!--android:layout_gravity="bottom|right"-->
                <!-- -->
                <!--app:backgroundTint="#FF0000"-->

                <!--android:layout_marginRight="32dp"-->
                <!--android:layout_marginBottom="32dp"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:layout_marginEnd="32dp" />-->





        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        style="@style/CategoriesDrawer"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/groups_label"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/HeaderText" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:id="@+id/settings_btn"

            android:gravity="left|center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_master_key"
            android:id="@+id/change_master_key_btn"

            android:gravity="left|center_vertical"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/settings_btn"
            />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:id="@+id/show_about_btn"

            android:gravity="left|center_vertical"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/change_master_key_btn"
            />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_list"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/show_about_btn" />

    </RelativeLayout>



</android.support.v4.widget.DrawerLayout>